<resources>
    <string name="app_name">Delareez</string>
    <string name="action">Edit Menu</string>
    <string name="drink">Drink</string>
    <string name="item_title">Item</string>
    <string name="item_desc">Price</string>
    <string name="delareezlogo">DelareezLogo</string>
    <string name="delareez_restaurant">Delareez Restaurant</string>
    <string name="item_pic">Item_pic</string>
    <string name="textview">Drink</string>
    <string name="add_value_to_firebase">Add Value to Firebase</string>
    <string name="add_value_string_add_value_to_firebase">Add Value @string/add_value_to_firebase</string>
    <string name="value">Value</string>


    <string name="message_write_error">Error Writing Message !</string>
    <string name="message_write_success">Successfully written to Tag !</string>
    <string name="message_write_progress">Writing to Tag..</string>
    <string name="message_tag_detected">NFC Tag Detected !</string>
    <string name="message_read_tag">Read from NFC Tag</string>
    <string name="message_write_tag">Write to NFC Tag</string>
    <string name="message_tap_tag">Tap the NFC Tag to your device !</string>
    <string name="hint_message">Message</string>


    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Register as new customer</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="action_sign_in_short">Register</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="check">Configure NFC Tag</string>
    <string name="logout">Logout</string>
    <string name="button">Checkout Order</string>
    <string name="add_new_menu">Add New Menu</string>
    <string name="menu_type_prompt">Type of Menu</string>


    <string name="MenuName">Menu Name</string>
    <string name="price">Price</string>
    <string name="menu_image">Menu Image</string>
    <string name="cancel_add_menu">Clear</string>
    <string name="add_menu">Add Menu</string>
    <string name="todo">TODO</string>
    <string name="menuprice">Menu Price</string>
    <string name="menu_name">Menu Name</string>
    <string name="de_lareez_restaurant">De\'Lareez Restaurant</string>
    <string name="Status">Status</string>
    <string name="update_menu">Update Menu</string>


    <string-array name="menu_arrays_entries">
        <item>Food</item>
        <item>Drink</item>
    </string-array>

    <string-array name="menu_status">
        <item>Available</item>
        <item>Out Of Order</item>
    </string-array>

    <string-array name="Order_Option">
        <item>Dine in</item>
        <item>Take Away</item>
    </string-array>

    <string-array name="Status_Order">
        <item>Not Started</item>
        <item>Preparing</item>
        <item>Ready</item>
    </string-array>

    <string-array name="Staff_Option">
        <item>Chef</item>
        <item>Waiter</item>
    </string-array>


    <string name="title_activity_order"></string>
    <string name="foodname">FoodName</string>
    <string name="food_name">Food Name</string>
    <string name="_1_000">1,000</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="restoran_de_lareez_jalan_kuda_ku1_41300_klang_selangor_malaysia">Restoran De\'Lareez Jalan Kuda/KU1 41300 Klang, Selangor Malaysia. Delareez Application version 1.0</string>


</resources>

