<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    android:layout_gravity="center"
    android:layout_marginBottom="@dimen/md_keylines"
    android:layout_marginLeft="@dimen/md_keylines"
    android:layout_marginRight="@dimen/md_keylines"
    android:foreground="?attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/drink_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_image_height"
            android:contentDescription="@string/item_pic"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/card_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_title_height"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/drink_image"
            android:layout_marginLeft="@dimen/md_keylines"
            android:text="@string/item_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/dark_grey"
            tools:ignore="RtlHardcoded"
            tools:text="@string/item_title" />

        <TextView
            android:id="@+id/drink_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginRight="@dimen/md_keylines"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="price"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/article_subheading"
            tools:ignore="HardcodedText"
            tools:text="@string/item_desc"
            android:layout_below="@+id/card_title"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/action_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/drink_price"
            android:text="@string/action"
            android:textColor="?attr/colorPrimary" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/drink_price"
            android:layout_below="@+id/drink_price"
            android:background="@null"
            app:srcCompat="@android:drawable/ic_menu_delete" />

        <TextView
            android:id="@+id/Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageButton2"
            android:layout_marginStart="23dp"
            android:layout_toEndOf="@+id/action_button"
            android:text="@string/Status" />

    </RelativeLayout>
</android.support.v7.widget.CardView>